--- a/Blog/Blog/Web.config
+++ b/Blog/Blog/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FanDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Fans.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PostDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Posts.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CommentDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Comments.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BlogDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Blog.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
