--- a/Blog/Blog/Blog.csproj
+++ b/Blog/Blog/Blog.csproj
@@ -153,6 +153,7 @@
     <Content Include="images\intro_shauli.png" />
     <Content Include="images\nav_background.png" />
     <Content Include="images\rss.png" />
+    <Content Include="images\shauli.png" />
     <Content Include="images\sidebar_background.png" />
     <Content Include="images\sidebar_section_background.png" />
     <Content Include="music\song.mp3" />
@@ -160,7 +161,12 @@
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="scripts\canvas.js" />
     <Content Include="scripts\funcs.js" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
@@ -169,6 +175,7 @@
     <Content Include="scripts\jquery.validate.min.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="scripts\map.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="Styles\base.css" />
     <Content Include="Styles\blog.css" />
@@ -180,7 +187,6 @@
     <Content Include="Views\FanClub\Details.cshtml" />
     <Content Include="Views\FanClub\Edit.cshtml" />
     <Content Include="Views\FanClub\Index.cshtml" />
-    <Content Include="Views\FanClub\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -188,14 +194,35 @@
     <Compile Include="Controllers\BlogGuestsController.cs" />
     <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\FanClubController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="DAL\BlogContext.cs" />
+    <Compile Include="Migrations\201609101203422_InitialCreate.cs" />
+    <Compile Include="Migrations\201609101203422_InitialCreate.Designer.cs">
+      <DependentUpon>201609101203422_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610151555440_Migration33.cs" />
+    <Compile Include="Migrations\201610151555440_Migration33.Designer.cs">
+      <DependentUpon>201610151555440_Migration33.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Map.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Fan.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\net.webservicex.www\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -217,10 +244,20 @@
     <Content Include="Views\Blog\Edit.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
     <Content Include="Views\BlogGuests\Index.cshtml" />
-    <Content Include="Views\Blog\Error.cshtml" />
     <Content Include="Views\Comments\Delete.cshtml" />
     <Content Include="Views\Comments\Index.cshtml" />
-    <Content Include="Views\Comments\Error.cshtml" />
+    <Content Include="Views\Map\Create.cshtml" />
+    <Content Include="Views\Map\Delete.cshtml" />
+    <Content Include="Views\Map\Details.cshtml" />
+    <Content Include="Views\Map\Edit.cshtml" />
+    <Content Include="Views\Map\Index.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Map\Locations.cshtml" />
+    <None Include="Web References\net.webservicex.www\globalweather.wsdl" />
+    <Content Include="Web References\net.webservicex.www\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -230,6 +267,33 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://www.webservicex.net/globalweather.asmx%3fWSDL">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\net.webservicex.www\</RelPath>
+      <UpdateFromURL>http://www.webservicex.net/globalweather.asmx%3fWSDL</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Blog_net_webservicex_www_GlobalWeather</CachedSettingsPropName>
+    </WebReferenceUrl>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201609101203422_InitialCreate.resx">
+      <DependentUpon>201609101203422_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610151555440_Migration33.resx">
+      <DependentUpon>201610151555440_Migration33.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
