--- a/Blog/Blog/Web.config
+++ b/Blog/Blog/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Blog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="BlogDBContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Blog.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -75,4 +78,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <applicationSettings>
+    <Blog.Properties.Settings>
+      <setting name="Blog_net_webservicex_www_GlobalWeather" serializeAs="String">
+        <value>http://www.webservicex.net/globalweather.asmx</value>
+      </setting>
+    </Blog.Properties.Settings>
+  </applicationSettings>
 </configuration>
