--- a/Blog/Blog/Blog.csproj
+++ b/Blog/Blog/Blog.csproj
@@ -176,6 +176,7 @@
     <Content Include="scripts\jquery.validate.unobtrusive.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="scripts\Weather.js" />
     <Content Include="Styles\base.css" />
     <Content Include="Styles\blog.css" />
     <Content Include="Styles\comments.css" />
