--- a/Blog/Blog/Blog.csproj
+++ b/Blog/Blog/Blog.csproj
@@ -224,6 +224,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\CommentPost.cs" />
+    <Compile Include="ViewModels\FanManager.cs" />
+    <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Web References\net.webservicex.www\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -268,6 +271,7 @@
     <Content Include="Views\Account\Delete.cshtml" />
     <Content Include="Views\Comments\Details.cshtml" />
     <Content Include="Views\Comments\Edit.cshtml" />
+    <Content Include="Views\BlogGuests\JoinGroup.cshtml" />
     <None Include="Web References\net.webservicex.www\globalweather.wsdl" />
     <Content Include="Web References\net.webservicex.www\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
