--- a/Blog/Blog/Blog.csproj
+++ b/Blog/Blog/Blog.csproj
@@ -227,6 +227,7 @@
     <Compile Include="ViewModels\CommentManager.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\FanManager.cs" />
+    <Compile Include="ViewModels\GroupCommManager.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Web References\net.webservicex.www\Reference.cs">
       <AutoGen>True</AutoGen>
